<resources>
    <string name="app_name">ToDoList</string>
    <string name="title_today">Today</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_todolist">ToDoList</string>
    <string name="title_search">Search</string>
    <string name="title_add_task">Add item</string>
    <string name="title_edit_task">Edit item</string>
    <string name="title_add_group">Add Project</string>
    <string name="title_edit_group">Edit Project</string>
    <string name="completed_tasks">Completed</string>
    <string name="details_title">TASK</string>
    <string name="hint_text">Name</string>
    <string name="details_reminder">REMINDER</string>
    <string name="details_remind_description">Remind me On a Day</string>
    <string name="details_priority">PRIORITY</string>
    <string name="details_priority_description">Priority</string>
    <string name="details_notes">NOTES</string>
    <string name="details_notes_description">Description…</string>
    <string name="dialog_title_priority">Select Priority</string>
    <string name="dialog_title_group">Select Group</string>
    <string name="menu_fargment_today_adding_task">Add task</string>
    <string name="button_cancel">Cancel</string>
    <string name="toolbar_button_done">Done</string>
    <string name="toolbar_button_edit">Edit</string>
    <string name="error_no_title">Please, enter name of task!</string>
    <string name="tab_search_active">Active Tasks</string>
    <string name="fragment_search_completed">Completed</string>
    <string name="search_no_results">No Results</string>
    <string name="item_group_count_tasks">(%1$s)</string>
    <string name="menu_fragment_todolist_add_group">Add Group</string>
    <string name="group_details_name">Name</string>
    <string name="group_details_title_add_project">Add Project</string>
    <string name="inbox_date">Date</string>
    <string name="inbox_group">Group</string>
    <string name="details_group">GROUP</string>
    <string name="details_default_group_name">Inbox</string>
    <string name="done">Done</string>
    <string name="menu_item_complete">Complete</string>
    <string name="item_remove">Remove</string>
    <string name="no_tasks">No Tasks</string>
    <string name="item_show_tasks">Show Tasks</string>
</resources>
