<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_today"
        android:enabled="true"
        android:title="@string/title_today"
        android:icon="@drawable/ic_tab_today"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_inbox"
        android:enabled="true"
        android:title="@string/title_inbox"
        android:icon="@drawable/ic_tab_inbox"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_todolist"
        android:enabled="true"
        android:title="@string/title_todolist"
        android:icon="@drawable/ic_tab_todolist"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:title="@string/title_search"
        android:icon="@drawable/ic_tab_search"
        app:showAsAction="ifRoom"
        />
</menu>